改进锁机制，增加循环保存机制

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,17 @@
 # 总开关
 use: false
 
+# 所以时间单位为1/20秒
+# 读取延迟
+# 如果出现载入玩家数据失败请适当调大该值
+delay: 10
+
+daily:
+# 开启循环保存玩家数据
+  use: true
+# 保存每个玩家的间隔
+  delay: 120
+  
 # 数据库连接信息
 mysql:
     addr: 127.0.0.1
@@ -9,6 +20,3 @@ mysql:
     user: user
     pass: pass
     
-# 读取延迟单位Tick
-# 如果出现载入玩家数据失败请适当调大该值
-delay: 10
