改进循环保存机制

--- a/config.yml
+++ b/config.yml
@@ -1,16 +1,19 @@
 # 总开关
 use: false
 
-# 所以时间单位为1/20秒
+# 所有时间单位为1/20秒
 # 读取延迟
 # 如果出现载入玩家数据失败请适当调大该值
 delay: 10
 
 daily:
 # 开启循环保存玩家数据
+# 如果卡服请调高间隔或关闭
   use: true
 # 保存每个玩家的间隔
   delay: 120
+# 启用循环保存的最新人数
+  min: 10
   
 # 数据库连接信息
 mysql:
