--- a/plugin.yml
+++ b/plugin.yml
@@ -1,13 +1,10 @@
 name: PlayerSQL
-main: com.mengcraft.PlayerSQL.PlayerSQL
+main: com.mengcraft.playersql.PMain
 version: 0.6.7
 commands:
     player:
-        description:
-        usage: 
         permission: playersql.admin
-        permission-message:
 permissions:
     playersql.admin:
-        description: 
         default: op
+depend: [ProtocolLib]
