修复没有安装Vault不能同步的问题。

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,4 +1,4 @@
 name: PlayerSQL
-main: com.mengcraft.playerSQL.PMain
+main: com.mengcraft.playerSQL.Main
 version: 0.7.1
-depend: [ProtocolLib]
+softdepend: [Vault]
