--- a/plugin.yml
+++ b/plugin.yml
@@ -1,4 +1,8 @@
 name: PlayerSQL
+version: 0.7.6
+description: Synchronize data between servers
+author: min梦梦
+website: http://www.spigotmc.org/resources/playersql.552/
+
 main: com.mengcraft.playerSQL.PlayerSQL
-version: 0.7.5
 softdepend: [Vault]
