--- a/resource/config.yml
+++ b/resource/config.yml
@@ -4,6 +4,7 @@ plugin:
   database: jdbc:mysql://127.0.0.1:3306/database
   username: user
   password: word
+  check: 3000
 
 sync:
   health: true
